--- a/ext/osv/Cargo.toml
+++ b/ext/osv/Cargo.toml
@@ -12,3 +12,4 @@ magnus = { version = "0.7", features = ["rb-sys"] }
 rb-sys = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 serde_magnus = "0.8.1"
+kanal = "0.1.0-pre8"
