--- a/ext/osv/Cargo.toml
+++ b/ext/osv/Cargo.toml
@@ -8,9 +8,9 @@ crate-type = ["cdylib"]
 
 [dependencies]
 csv = "^1.3"
+flate2 = "1.0.35"
+kanal = "0.1.0-pre8"
 magnus = { version = "0.7", features = ["rb-sys"] }
 rb-sys = "^0.9"
 serde = { version = "1.0", features = ["derive"] }
 serde_magnus = "0.8.1"
-kanal = "0.1.0-pre8"
-bumpalo = { version = "3.16.0", features = ["collections"] }
