--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           ruby-version: 3.2.2
 
+      - name: Run tests
+        run: bundle exec rake
+
       - name: Publish to GPR
         run: |
           mkdir -p $HOME/.gem
