Only try to push gem if version changed

--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -3,8 +3,12 @@ name: Ruby Gem
 on:
   push:
     branches: ["main"]
+    paths:
+      - "lib/osv/version.rb"
   pull_request:
     branches: ["main"]
+    paths:
+      - "lib/osv/version.rb"
 
 jobs:
   build:
