Improvements to build process

--- a/.envrc
+++ b/.envrc
@@ -3,3 +3,5 @@ source_url "https://raw.githubusercontent.com/nix-community/nix-direnv/3.0.5/dir
 nix_direnv_manual_reload
 
 use flake . --fallback --accept-flake-config
+
+dotenv
