More build process improvements

--- a/.envrc
+++ b/.envrc
@@ -4,4 +4,8 @@ nix_direnv_manual_reload
 
 use flake . --fallback --accept-flake-config
 
+# When running in a nix shell, the build assumes it's happening in CI and forces a release build.
+# Setting this env var forces it to respect the RB_SYS_CARGO_PROFILE env var.
+export RB_SYS_TEST=1
+
 dotenv
